# handel

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ReadMe.md  handel.yml
.github/workflows/: build.yml
data/templates/: dynamodb.yml  kafka.yml  keycloak.yml  mailhog.yml  memcached.yml  mysql.yml  redis.yml  zookeeper.yml
src/: cli.yml  compose.rs  config.rs  images.rs  main.rs  reference.rs  templates.rs  utils.rs  volumes.rs
