[package]
name = "handel"
version = "0.3.14"
authors = ["Michael Sommerville <msommerville@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "process"] }
tokio-rustls = "0.25.0"
aws-config =  { version = "1.1.5", default-features = false, features = ["rustls"] }
s3 = { package="aws-sdk-s3", version = "1.1.5", default-features = false, features = ["rustls"] }
yaml-rust = "0.4"
clap = {version = "2.34.0", features = ["yaml"]}
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4.14"
unzip = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.9.21"
chrono = "0.4"
regex = "1"
http = "1.0.0"
home = "0.5.3"
shellexpand = "3.1.0"
snafu = "0.6.10"
zip = "0.6.6"
tempfile = "3"
stderrlog = "0.5"
